<resources>
    <string name="app_name">Economicis</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Username</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_user">User</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="menu_categories">Categories</string>
    <string name="total_spend">Total Spend</string>
    <string name="total_spend_number" translatable="false">00.00</string>
    <string name="category_foods" translatable="false">Foods</string>
    <string name="category_concept" translatable="false">McDonals</string>
    <string name="last_transactions">LATEST TRANSACTION</string>
    <string name="history_transaction">History</string>
    <string name="title_activity_transaction">New Transaction</string>
    <string name="new_assignment">New Assignment</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="save_transaction">SAVE TRANSACTION</string>
    <string name="title_activity_register">Register</string>
    <string name="personal_data">Personal Information</string>
    <string name="person_name">Name</string>
    <string name="last_name">Last name</string>
    <string name="account">Account</string>
    <string name="person_username">Username</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign up</string>
    <string name="password_not_equals">Passwords do not match</string>
    <string name="complete_all_fields">Please, complete all fields.</string>
    <string name="username_length">Username needs 6 characters</string>
    <string name="password_length">Password needs 6 characters</string>
    <string name="register_success">Successful registration.</string>
    <string name="user_already_exist">User already existing.</string>
    <string name="sign_up_error">Error creating user.</string>
    <string name="user_doesnt_exist">Username does not exist.</string>
    <string name="login_error">Error, try again later.</string>
    <string name="menu_new_category">New Category</string>
    <string name="menu_new_assignment">New Assigment</string>
    <string name="error">An error occurred.</string>
    <string name="title_activity_category" translatable="false">CategoryActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="create_category">Create category</string>
    <string name="new_category">New Category</string>
    <string name="amount_required">Amount  required</string>
    <string name="description_required">Description required</string>
</resources>
