<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.transaction.TransactionActivity"
    tools:showIn="@layout/activity_transaction"
    android:background="@color/colorBackgroundList">

    <LinearLayout
        android:id="@+id/transaction_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_background_height"
        android:background="@drawable/background_layout_invert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/new_assignment"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_total_spend" />

        <EditText
            android:id="@+id/transaction_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/total_spend_number"
            android:textColor="@color/colorWhite"
            android:textColorLink="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:outlineSpotShadowColor="@color/colorWhite"
            android:outlineAmbientShadowColor="@color/colorWhite"
            android:shadowColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/text_size_amount" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_header">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/category"
            android:textSize="@dimen/category_title_size" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/transaction_spinner_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/container_category">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/description"
            android:textSize="@dimen/category_title_size" />

        <EditText
            android:id="@+id/transaction_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/transaction_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/save_transaction"
        android:fontFamily="@font/raleway_bold"
        android:textColor="@color/colorWhite"
        android:background="@drawable/background_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>